--- a/planes.html
+++ b/planes.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planes de Suscripción</title>
     <link rel="stylesheet" href="planes.css">
     <script src="static/app.js"></script>
@@ -60,3 +61,4 @@
     </div>
 </body>
 </html>
+
