--- a/planes.html
+++ b/planes.html
@@ -59,6 +59,15 @@
             <button class="boton">¡COMENZAR YA!</button>
         </div>
     </div>
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.instagram.com/invexcore_?igsh=MWNnN216dWhieGprdg==" target="_blank">Instagram</a> |
+            <a href="https://www.facebook.com/share/1VeZ6JV585/?mibextid=wwXIfr" target="_blank">Facebook</a> |
+            <a href="https://x.com/invexcore?s=11" target="_blank">X</a>
+        </div>
+        <p>&copy; 2025 INVEXCORE. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
+
 
