--- a/planes.html
+++ b/planes.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planes de Suscripción</title>
     <link rel="stylesheet" href="planes.css">
-    <script src="static/app.js"></script>
+    <script src=""></script>
 </head>
 <body>
     <!-- BARRA DE NAVEGACIÓN COMPLETA -->
     <nav class="navbar">
-        <div class="logo">INVEXCORE</div>
+        <div class="logo">
+  <img src="logo invecore.png" alt="Logo INVEXCORE">
+  <span>INVEXCORE</span>
+</div>
         <ul class="nav-list">
             <li><a href="index.html#inicio">INICIO</a></li>
             <li><a href="index.html#acerca">ACERCA DE NOSOTROS</a></li>
@@ -59,7 +62,7 @@
             <button class="boton">¡COMENZAR YA!</button>
         </div>
     </div>
-    <footer class="footer">
+     <footer class="footer">
         <div class="social-links">
             <a href="https://www.instagram.com/invexcore_?igsh=MWNnN216dWhieGprdg==" target="_blank">Instagram</a> |
             <a href="https://www.facebook.com/share/1VeZ6JV585/?mibextid=wwXIfr" target="_blank">Facebook</a> |
@@ -67,6 +70,9 @@
         </div>
         <p>&copy; 2025 INVEXCORE. Todos los derechos reservados.</p>
     </footer>
+    <!-- en el <head> -->
+<script src="static/app.js" defer></script>
+
 </body>
 </html>
 
