--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shorcut icon" href="logo invecore.png" type="image/x-icon">
     <link rel="stylesheet" href="static/styles.css">
     <script src="static/app.js" defer></script>
     <title>INVEXCORE</title>
@@ -147,6 +148,7 @@
 
 </body>
 </html>
+
 
 
 
